--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "server"
   ],
   "scripts": {
-    "test": "test-runner test.js"
+    "test": "test-runner test/*.js"
   },
   "dependencies": {
     "koa-static": "^3.0.0"
   },
   "devDependencies": {
-    "test-runner": "^0.3.0"
+    "lws": "^1.0.0-pre2.1",
+    "req-then": "^0.6.2",
+    "test-runner": "^0.4.0"
   }
 }
