--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lws-static",
   "author": "Lloyd Brookes <75pound@gmail.com>",
   "version": "0.3.1",
-  "description": "Lws feature wrapper for koa-static",
+  "description": "Lws middleware wrapper for koa-static",
   "repository": "https://github.com/lwsjs/static.git",
   "license": "MIT",
   "keywords": [
@@ -17,7 +17,7 @@
     "koa-static": "^3.0.0"
   },
   "devDependencies": {
-    "lws": "^1.0.0-pre2.1",
+    "lws": "^1.0.0-pre2.2",
     "req-then": "^0.6.2",
     "test-runner": "^0.4.0"
   }
