--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "test": "test-runner test/*.js"
   },
   "dependencies": {
-    "koa-static": "^4.0.0"
+    "koa-static": "^4.0.2"
   },
   "devDependencies": {
-    "lws": "^1.0.0-pre3.1",
+    "lws": "^1.2.1",
     "req-then": "^0.6.4",
-    "test-runner": "^0.4.0"
+    "test-runner": "^0.5.0"
   }
 }
