--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "keywords": [
     "lws",
+    "lws-middleware",
     "static",
     "server"
   ],
@@ -20,7 +21,7 @@
     "koa-static": "^5.0.0"
   },
   "devDependencies": {
-    "lws": "^2.0.0-11",
+    "lws": "^2.0.0",
     "node-fetch": "^2.6.0",
     "test-runner": "^0.6.0"
   },
