--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "repository": "https://github.com/lwsjs/static.git",
   "license": "MIT",
   "engines": {
-    "node": ">=10"
+    "node": ">=14"
   },
+  "exports": "./index.mjs",
   "keywords": [
     "lws",
     "lws-middleware",
@@ -15,17 +16,17 @@
     "server"
   ],
   "scripts": {
-    "test": "test-runner test/*.js"
+    "test": "test-runner test/*.mjs"
   },
   "dependencies": {
     "koa-static": "^5.0.0"
   },
   "devDependencies": {
-    "lws": "^2.0.8",
-    "node-fetch": "^2.6.0",
-    "test-runner": "^0.8.13"
+    "lws": "^4.0.1",
+    "node-fetch": "^2.6.1",
+    "test-runner": "^0.9.6"
   },
   "files": [
-    "index.js"
+    "index.mjs"
   ]
 }
